

==============================
Release 5.*
==============================
2014-06-25    NavigationBar: Add NavigationBar
2014-06-08    NullToBooleanConverter, NullToVisibilityConverter: Make converters sealed
              WPFMessageBox: The background control should be behind the buttons panel as well
              WPFMessageBox: Take care about the focus
              WPFMessageBox: The background can hold an additional object
              WPFMessageBox: Add style options to modify element
              WPFMessageBox: Additional controls can be placed
              WPFMessageBox: If the details are open use another property if resizing is possible or not
              WPFMessageBox: Add possibility to set the details content
              WPFMessageBox: Add properties to define different sizes with the details open
              WPFMessageBox: Remove Height and Width option properties out of the WPFMessageBoxOptions; since it does SizeToContent is has no effect anyway
              WPFMessageBox: Add possibility to show and hide a details button (there is no details section so far)
              WPFMessageBox: Organize options for the window to a separate object in the WPFMessageBoxOptions
              WPFMessageBox: Since not everything can be changed by assigning the window style, the whole functionality got removed
              WPFMessageBox: The window shows the minimize and maximize buttons if it can be resized
2014-06-07    WPFMessageBox: Add ScrollViewer control to show a vertical scrollbar if the text gets to long
              WPFMessageBox: The continue button was not able to get the default focus
              WPFMessageBox: Setting the default button was not working
              WPFMessageBox: Add "_Don't show this message again" checkbox possibility
2014-06-04    WPFMessageBox: Adjust ButtonsPanel to have dynamic longer buttons if the text is adjusted